--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,19 @@
 ---
-# tasks file for Dell-Networking.dellos-dcb
+# tasks file for Dell-Networking.dellosdcb
+
+ - name: "Generating DCB configuration for dellos9"
+   template:
+      src: dellos9_dcb.j2
+      dest: "{{ build_dir }}/dcb9_{{hostname}}.conf.part"
+   when: ansible_net_os_name == "dellos9" and ((dellos_cfg_generate | default('False')) | bool)
+#   notify: save config os9
+   register: generate_output
+
  - name: "Provisioning DCB configuration for dellos9"
    dellos9_config:
       src: dellos9_dcb.j2
       provider: "{{ cli }}"
-#   notify: save config os9
    when: ansible_net_os_name == "dellos9"
+#   notify: save config os9
    register: output
+
