--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,11 +7,14 @@ galaxy_info:
   min_ansible_version: 2.2
 
   platforms:
-  - name: dell os9
+  - name: DellOS
 
   galaxy_tags:
     - networking
-    - dell
+    - dell 
     - emc
     - os9
     - dellemc
+    - dellos10
+    - dellos9
+    - dellos6
